tests/paczka1/fuzzy1/89723234.err
Error in line 3: MJtnyfHz6jn S422 33,0
Error in line 21: A543 Sรป23 33รป,4
Error in line 24: EmSIAXi S422 11,5
Error in line 25: EmSIAXi S123 63,7
Error in line 20: A543 S123 86,3
Error in line 29: A543 A543 35,4
Error in line 19: 8dO7US A543 52,8
